coded the layout using ngmaterial but I'm having issues with content overflowing with med sized screen widths :(

--- a/app/styles/edhub.css
+++ b/app/styles/edhub.css
@@ -46,6 +46,10 @@ body {
     -- edhub initial ui code --
 **********************************/
 
+.L9-text-center {
+    text-align: center;
+}
+
 md-input-container.md-icon-float > ng-md-icon {
     top: 8px;
     left: 2px;
